--- a/.pylintrc
+++ b/.pylintrc
@@ -37,7 +37,7 @@ persistent=yes
 
 # List of plugins (as comma separated values of python modules names) to load,
 # usually to register additional checkers.
-load-plugins=
+load-plugins=pylint_quotes
 
 # Use multiple processes to speed up Pylint.
 jobs=8
