Change scripts test hierarchy (#35)
* add scripts test hierarchy and fix lint

* Enable scripts tests

* Enable scripts tests

* Fix lint

* fix makefile

* fix

* fix

* rearrange example and test (#26)

* rearrange example and test

* fix makefile

* fix pylint

* fix docstring

* try test path

* try scripts.*

* fix conflict

* fix

* fix

* fix

* fix

* fix

* fix

* fix

* fix

--- a/.pylintrc
+++ b/.pylintrc
@@ -30,7 +30,7 @@ ignore=CVS
 
 # Add files or directories matching the regex patterns to the blacklist. The
 # regex matches against base names, not paths.
-ignore-patterns=
+ignore-patterns=test_.*.py
 
 # Pickle collected data for later comparisons.
 persistent=yes
