--- a/env/py2.yml
+++ b/env/py2.yml
@@ -4,10 +4,11 @@ channels:
   - defaults
 dependencies:
   - python=2.7
+  - perl
   - sphinx=1.7.2
   - spacy
   - nltk
-  - nose
+  - nose>=1.3.7
   - nose-timer
   - pip:
     - mxnet>=1.2.0b20180415
