--- a/env/doc.yml
+++ b/env/doc.yml
@@ -12,6 +12,6 @@ dependencies:
   - recommonmark
   - spacy
   - nltk
+  - pandoc=2.2
   - pip:
     - mxnet-cu80>=1.2.0b20180518
-    - pandoc==2.2
