--- a/env/doc.yml
+++ b/env/doc.yml
@@ -2,8 +2,9 @@ name: gluon_nlp_docs
 channels:
   - conda-forge
 dependencies:
-  - python
+  - python=3.6
   - ipython
+  - ipykernel
   - sphinx=1.7.5
   - sphinx-gallery
   - sphinx_rtd_theme
@@ -14,3 +15,4 @@ dependencies:
   - pandoc==2.2.1
   - pip:
     - mxnet-cu80>=1.3.0b20180629
+    - notedown
