run tests in parallel (#317)
* update tests

* parallelize tests

* update jenkins

* adjust worker count

* default codecov +flags

--- a/env/py3.yml
+++ b/env/py3.yml
@@ -10,6 +10,7 @@ dependencies:
   - pytest
   - flaky
   - pytest-cov
+  - pytest-xdist
   - pip:
     - mxnet-cu80>=1.3.0b20180817
     - sacremoses
