--- a/env/doc.yml
+++ b/env/doc.yml
@@ -1,4 +1,3 @@
-name: gluon_nlp_docs
 channels:
   - conda-forge
 dependencies:
@@ -13,7 +12,8 @@ dependencies:
   - spacy
   - nltk
   - pandoc=1.19.2
+  - pip=9.0.3
+  - notedown
   - pip:
-    - mxnet-cu80>=1.3.0b20180817
-    - notedown
+    - mxnet-cu80>=1.3.0
     - sacremoses
