--- a/env/doc.yml
+++ b/env/doc.yml
@@ -14,6 +14,7 @@ dependencies:
   - pandoc=1.19.2
   - pip=9.0.3
   - notedown
+  - numba>=v0.40.0
   - pip:
     - mxnet-cu90>=1.3.0
     - sacremoses
