--- a/env/py2.yml
+++ b/env/py2.yml
@@ -2,15 +2,15 @@ channels:
   - conda-forge
 dependencies:
   - python=2.7
+  - pip=18.1
   - perl
   - sphinx=1.7.7
   - spacy
   - nltk
   - pytest
   - flaky
-  - pytest-cov
+  - pytest-cov=2.6.0
   - mock
   - pytest-xdist
-  - pip=9.0.3
   - pip:
     - mxnet-cu90>=1.3.0
