--- a/env/doc.yml
+++ b/env/doc.yml
@@ -15,8 +15,10 @@ dependencies:
   - pandoc=1.19.2
   - notedown
   - numba>=v0.40.0
+  - openjdk=8.0.152
   - pip:
     - mxnet-cu90>=1.3.0
     - sacremoses
     - seaborn
     - sentencepiece
+    - jieba
