--- a/env/py2.yml
+++ b/env/py2.yml
@@ -7,11 +7,11 @@ dependencies:
   - sphinx=1.7.7
   - spacy
   - nltk
-  - pytest
-  - flaky
+  - pytest<4
+  - flaky<4
   - pytest-cov=2.6.0
-  - mock
-  - pytest-xdist
+  - mock<3
+  - pytest-xdist<2
   - pip:
     - mxnet-cu90>=1.3.0
     - sentencepiece
