--- a/env/doc.yml
+++ b/env/doc.yml
@@ -17,7 +17,8 @@ dependencies:
   - numba>=v0.40.0
   - openjdk=8.0.152
   - pip:
-    - mxnet-cu90>=1.3.0
+    - https://github.com/mli/mx-theme/tarball/master
+    - mxnet-cu90mkl>=1.3.0
     - sacremoses
     - seaborn
     - sentencepiece
