--- a/env/py3.yml
+++ b/env/py3.yml
@@ -13,6 +13,6 @@ dependencies:
   - mock<3
   - pytest-xdist<2
   - pip:
-    - mxnet-cu90>=1.3.0
+    - mxnet-cu90mkl>=1.3.0
     - sacremoses
     - sentencepiece
