[CI] speed up tests (#582)
* speed up tests

* freeze nbconvert

--- a/env/doc.yml
+++ b/env/doc.yml
@@ -9,6 +9,7 @@ dependencies:
   - sphinx-gallery
   - sphinx_rtd_theme
   - nbsphinx>=0.3.4,<0.4
+  - nbconvert=5.4.0
   - recommonmark
   - spacy
   - nltk
