[CI] CI refactoring to speed up tests (#566)
* refactor CI pipelines

* fix py2 lint

* py2 py3

* add master tests

* update script tests

* update py3 master env

* update test call

* update test scripts

* separate cpu and gpu env

* fix lint

* setup codecov upload

* add script unittests

* adjust integration tests

* add integration (script) tests

* fix test

* add documentation pipeline

* fix lint

* fix doctest

* not using master for doc build until bugs are fixed

* separate link check

* fix doc

* use separate pkg cache for conda

* fix doc build pipeline

--- a/env/cpu/py3-master.yml
+++ b/env/cpu/py3-master.yml
@@ -4,6 +4,8 @@ dependencies:
   - python=3.6
   - pip=18.1
   - perl
+  - pylint=1.9.2
+  - flake8
   - sphinx=1.7.7
   - spacy
   - nltk
@@ -13,6 +15,7 @@ dependencies:
   - mock<3
   - pytest-xdist<2
   - pip:
-    - mxnet-cu92mkl>=1.5.0b20190407
+    - pylint-quotes<0.2
+    - mxnet-mkl>=1.5.0b20190407
     - sacremoses
     - sentencepiece<0.2
