--- a/env/cpu/py2.yml
+++ b/env/cpu/py2.yml
@@ -1,9 +1,11 @@
 channels:
   - conda-forge
 dependencies:
-  - python=3.6
+  - python=2.7
   - pip=18.1
   - perl
+  - pylint=1.9.2
+  - flake8
   - sphinx=1.7.7
   - spacy
   - nltk
@@ -13,6 +15,6 @@ dependencies:
   - mock<3
   - pytest-xdist<2
   - pip:
-    - mxnet-cu92mkl>=1.4.0
-    - sacremoses
+    - pylint-quotes<0.2
+    - mxnet-mkl>=1.4.0
     - sentencepiece<0.2
