--- a/env/gpu/py2.yml
+++ b/env/gpu/py2.yml
@@ -4,6 +4,8 @@ dependencies:
   - python=2.7
   - pip=18.1
   - perl
+  - pylint=1.9.2
+  - flake8
   - sphinx=1.7.7
   - spacy
   - nltk
@@ -13,5 +15,6 @@ dependencies:
   - mock<3
   - pytest-xdist<2
   - pip:
+    - pylint-quotes<0.2
     - mxnet-cu92mkl>=1.4.0
     - sentencepiece<0.2
